--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nextui-org/react": "^2.4.8",
     "@react-oauth/google": "^0.12.1",
     "framer-motion": "^11.11.8",
+    "moment-timezone": "^0.5.46",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
