--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "react-image-crop": "^11.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
